syntax = "proto3";

package audiobook.backend.language.skill.v1;

option go_package = "github.com/seidu626/audiobook/services/language/proto/skill";

// import "shared/proto/common/common.proto";
import "google/protobuf/wrappers.proto";
import "services/language/proto/entities/entities.proto";
import "validate/validate.proto";

// Ref:
// https://github.com/seizadi/atlas-template/blob/master/resolved/pkg/pb/cmdb.proto

// Skill Service
service SkillService {
  rpc Exist(ExistRequest) returns (ExistResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

// FIXME: https://github.com/envoyproxy/protoc-gen-validate/issues/223
// with Workaround in .override.go
message ExistRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue title = 2 [ (validate.rules).string = {
    min_len : 4
    max_len : 16
    pattern : "^[a-z0-9_-]{3,15}$"
    max_bytes : 256
  } ];
}

message ExistResponse {
  option (validate.disabled) = true;
  bool result = 1;
}

message ListRequest {
  google.protobuf.UInt32Value limit = 1
      [ (validate.rules).uint32 = {gte : 1 lte : 100} ];
  google.protobuf.UInt32Value page = 2 [ (validate.rules).uint32.gte = 1 ];
  google.protobuf.StringValue sort = 3;
  google.protobuf.StringValue title = 4 [ (validate.rules).string = {
    min_len : 4
    max_len : 16
    pattern : "^[a-z0-9_-]{3,15}$"
    max_bytes : 256
  } ];
  google.protobuf.StringValue url_title = 5
      [ (validate.rules).string.min_len = 3 ];
  int32 lesson_number = 6;
}

message ListResponse {
  option (validate.disabled) = true;
  repeated audiobook.backend.language.entities.v1.Skill results = 1;
  uint32 total = 2;
}

message GetRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue title = 2 [ (validate.rules).string = {
    min_len : 4
    max_len : 16
    pattern : "^[a-z0-9_-]{3,15}$"
    max_bytes : 256
  } ];
  google.protobuf.StringValue url_title = 3
      [ (validate.rules).string.min_len = 3 ];
  int32 lesson_number = 4;
}

message GetResponse {
  option (validate.disabled) = true;
  audiobook.backend.language.entities.v1.Skill result = 1;
}

message CreateRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue title = 2
      [ (validate.rules).string = {min_len : 4 max_len : 50} ];
  google.protobuf.StringValue url_title = 3
      [ (validate.rules).string.min_len = 3 ];
  int32 lesson_number = 4;
  repeated google.protobuf.StringValue dependencies = 5;
  bool disabled = 6;
  google.protobuf.StringValue description = 7;
  bool locked = 8;
  google.protobuf.StringValue type = 9;
  google.protobuf.StringValue category = 10;
  int32 index = 11;
  google.protobuf.StringValue language_id = 12;
}

message CreateResponse {
  option (validate.disabled) = true;
  audiobook.backend.language.entities.v1.Skill result = 1;
}

message UpdateRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue title = 2
      [ (validate.rules).string = {min_len : 4 max_len : 50} ];
  google.protobuf.StringValue url_title = 3
      [ (validate.rules).string.min_len = 3 ];
  int32 lesson_number = 4;
  repeated google.protobuf.StringValue dependencies = 5;
  bool disabled = 6;
  google.protobuf.StringValue description = 7;
  bool locked = 8;
  google.protobuf.StringValue type = 9;
  google.protobuf.StringValue category = 10;
  int32 index = 11;
  google.protobuf.StringValue language_id = 12;
}

message UpdateResponse {
  option (validate.disabled) = true;
  audiobook.backend.language.entities.v1.Skill result = 1;
}

message DeleteRequest {
  option (validate.disabled) = true;
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue title = 2 [ (validate.rules).string = {
    min_len : 4
    max_len : 16
    pattern : "^[a-z0-9_-]{3,15}$"
    max_bytes : 256
  } ];
}

message DeleteResponse {
  option (validate.disabled) = true;
  audiobook.backend.language.entities.v1.Skill result = 1;
}
